--- a/build.yaml
+++ b/build.yaml
@@ -7,10 +7,10 @@
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
- include:
+ #include:
 #   - board: bdn9_rev2
-   - board: nice_nano_v2
-     shield: sidekick
+  # - board: nice_nano_v2
+    # shield: sidekick
 #   - board: nice_nano_v2
 #     shield: corne_left
 #     snippet: studio-rpc-usb-uart
@@ -18,3 +18,6 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+   - board: nice_nano_v2
+     shield: sidekick
