--- a/boards/shields/sidekick/sidekick.dtsi
+++ b/boards/shields/sidekick/sidekick.dtsi
@@ -1,5 +1,10 @@
 #include <dt-bindings/zmk/matrix_transform.h> // Put this with the other includes at the top of your overlay
 
+&physical_layout0 {
+    kscan = <&kscan0>;
+    transform = <&matrix_transform0>;
+};
+
 / {
     default_transform: keymap_transform0 {
         compatible = "zmk,matrix-transform";
