--- a/boards/shields/sidekick/sidekick.dtsi
+++ b/boards/shields/sidekick/sidekick.dtsi
@@ -1,5 +1,5 @@
 #include <dt-bindings/zmk/matrix_transform.h> // Put this with the other includes at the top of your overlay
-#include <sidekick-layouts.dtsi>
+#include "sidekick-layouts.dtsi"
 
 &physical_layout0 {
     kscan = <&kscan0>;
