--- a/boards/shields/sidekick/sidekick.dtsi
+++ b/boards/shields/sidekick/sidekick.dtsi
@@ -3,7 +3,7 @@
 
 &physical_layout0 {
     kscan = <&kscan0>;
-    transform = <&matrix_transform0>;
+    transform = <&default_transform>;
 };
 
 / {
